--- a/html-reference.css
+++ b/html-reference.css
@@ -54,6 +54,12 @@ th {
   
 }
 
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 15px;
+  width: 100%;
+}
 
 
 
