--- a/html-reference.css
+++ b/html-reference.css
@@ -16,10 +16,11 @@ h1 {
   margin: 0px;
 }
 
-h3 {
+.heading3 {
   color: Azure;
   background-color: DarkTurquoise;
   font-family: "Arial Black", Gadget, sans-serif;
+  text-align: center;
   padding: 0px;
   margin: 0px;
 }
@@ -46,21 +47,35 @@ tr {
 
 th {
   background-color: Silver;
+  width: 50%;
 }
 
 .syntax {
-  color: cornflowerblue;
+  color: DeepSkyBlue;
   font-family: "Lucida Console", Monaco, monospace;
-  
+}
+.example {
+  color: DodgerBlue;
+  font-family: "Arial Black", Gadget, sans-serif;
+  class="syntax"
 }
 
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
   padding: 15px;
-  width: 100%;
 }
 
+.hr
+{
+ border-color: black;
+    background-color: DarkTurquoise;
+    height: 5px;
+    border-width: 2px;
+    border-radius: 25px;
+    width: 600px;
+    height: 4px;
+}
 
 
 
