--- a/website-project/layout.css
+++ b/website-project/layout.css
@@ -8,22 +8,27 @@ body {
 
 /* Style the header */
 .header {
-    background-color: #f1f1f1;
-    padding: 20px;
+    background-color: White;
+    padding: 0px;
     text-align: center;
+    width: auto;
+    height: 386px;
+    background-image: url("http://downloadclipart.org/do-upload/clipart/2016-06/Italy_Football_National_Team_Logo.jpg");
+    background-repeat: repeat-x;
+    background-position: center bottom;
 }
 
 /* Style the top navigation bar */
 .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: Snow;
 }
 
 /* Style the topnav links */
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -37,7 +42,7 @@ body {
 
 /* indicate active page on nav */
 .active {
-    background-color: #4CAF50;
+    background-color: LightSteelBlue;
 }
 
 /* A - Create three unequal columns that floats next to each other */
