--- a/website-project/styles.css
+++ b/website-project/styles.css
@@ -1,10 +1,10 @@
 .content {
-  background-color:#f7e6ff;
+  background-color: #3969E3;
 }
 
-.content p {
-  font-family:"Ariel", sans-serif;
-  color:black;
+.content {
+  font-family:"Arial", sans-serif;
+  color:Snow;
 }
 
 img {
